[package]
authors = ["C.Solovev <constantine.solovev@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "stm32f411-examples"
version = "0.1.0"

# Pal dependencies

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
cortex-m-semihosting = "0.3.7"
panic-halt = "0.2.0"
panic-semihosting = "0.5.6"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# (PAC) Peripheral access create for STM32F411 microcontrollers
[dependencies.stm32f4]
features = ["stm32f411", "rt"]
version = "0.14.0"

# (HAL) Hardware abstraction layer for STM32F411 microcontrollers
[dependencies.stm32f4xx-hal]
features = [ "stm32f411" ]
version = "0.11.1"

# this lets you use `cargo fix`!
[[bin]]
name = "stm32f411-examples"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
